# EmailQAToolkit

./: .gitignore  .replit  CHANGES_SUMMARY.md  Dockerfile  README.md  api_endpoints.py  app.py  batch_processor.py  browser_automation.py  browser_detection.py  cloud_api_test.py  cloud_browser_automation.py  cloud_detection_test.py  config.py  config_response.txt  demo_cloud_detector.py  deploy.py  direct_cloud_test_server.py  domain_config.json  downloaded_index.html  email_qa.py  email_qa_enhanced.py  email_qa_prod.py  index.html  locale_config.py  main.py  main_enhanced.py  main_prod.py  partly_products_content.html  pyproject.toml  replit.md  root_response.txt  run_demo.sh  run_qa_tests.py  run_server.sh  run_servers.py  run_servers_enhanced.py  run_servers_prod.py  runtime_config.py  scrapingbee_debug.json  (+30 more)
archive/: check_ui.py  main_enhanced.py  main_prod.py  test_api.py  test_metadata.html  test_product_tables.py  updatefile.py
attached_assets/: Pasted-Don-t-code-anything-yet-this-is-a-brainstorming-and-planning-request-I-had-to-revert-a-day-s-wort-1749784869011_1749784869011.txt  Replit_test_email.html  Replit_test_es_MX.html  class_test.html  email_qa_automation.py  footer_code_validation.md  index.html  localized_array_1749784946102.json  product_class_requirements.json  product_class_test.html  requirements.txt  sample_requirements.json  sample_requirements_esMX.json  start.txt  test_website.py  utm_campaign_sample.json  utm_validation_guide.md
static/: app.js  batch.html  domain-status.html  index.html  index.html.bak  localization.html  preview.html  (+4 more)
(+26 files in other folders)
