[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "pydantic>=2.11.3",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "selenium>=4.31.0",
    "uvicorn>=0.34.1",
    "webdriver-manager>=4.0.2",
]
